...
            )
            HorizontalDivider()
        }
    }
}

private val previewModels = listOf(Model(2206, "Scion xA"), Model(2207, "Scion tC"), Model(2208, "Corolla"))

@Preview(showBackground = true)
@Composable
private fun ModelsScreenContentPreview() {
    MarqueTheme {
        ModelsScreen(
...
